--- a/src/data/project.json
+++ b/src/data/project.json
@@ -12,5 +12,19 @@
         "content" : "J'ai effectué un stage d'une durée d'un mois au sein d'un restaurant McDonald's", 
         "date" : "07/2023", 
         "tools" : ["html", "css", "javascript", "php", "mysql"]
+    },
+    {
+        "id" : 3, 
+        "title" : "Webdocumentaire",
+        "content" : "J'ai développé un Webdocumentaire sur un parc situé à Meaux.", 
+        "date" : "12/2023", 
+        "tools" : ["html", "css", "javascript", "react"]
+    },
+    {
+        "id" : 4, 
+        "title" : "Aéro Club",
+        "content" : "J'ai effectué la refonte d’un site pour un aéro club.", 
+        "date" : "01/2024", 
+        "tools" : ["html", "css", "javascript", "php", "mysql"]
     }
 ]
