--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
+    "@squircle-js/react": "^1.2.0",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.312.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.3",
+    "react-router-hash-link": "^2.4.3",
     "sass": "^1.70.0"
   },
   "devDependencies": {
