add new project

--- a/src/data/project.json
+++ b/src/data/project.json
@@ -1,34 +1,27 @@
 [
   {
     "id": 1,
-    "title": "Reviens",
-    "link": "reviens",
-    "content": "J'ai développé un site de réservation pour le matériel de mon établissement",
-    "date": "05/2023",
-    "tools": ["html", "css", "javascript", "php", "mysql"]
-  },
-  {
-    "id": 2,
-    "title": "Mcdonald's",
-    "link": "mcdonalds",
-    "content": "J'ai effectué un stage d'une durée d'un mois au sein d'un restaurant McDonald's",
-    "date": "07/2023",
-    "tools": ["html", "css", "javascript", "php", "mysql"]
-  },
-  {
-    "id": 3,
     "title": "Webdocumentaire",
-    "link": "webdocumentaire",
+    "link": "https://ecologue-patis.vercel.app/",
     "content": "J'ai développé un webdocumentaire sur le métier d'écologue.",
     "date": "12/2023",
     "tools": ["html", "css", "javascript", "react"]
   },
+
   {
-    "id": 4,
-    "title": "Aéro Club",
-    "link": "aeroclub",
-    "content": "J'ai effectué la refonte d’un site pour un aéro club.",
-    "date": "01/2024",
-    "tools": ["html", "css", "javascript", "php", "mysql"]
+    "id": 2,
+    "title": "Sushi House",
+    "link": "https://sushihouse.vercel.app/",
+    "content": "Dans le cadre de la SAE 401, nous avons réalisé un site de e-commerce spécialisé dans la vente de sushi.",
+    "date": "04/2024",
+    "tools": ["angular", "javascript", "php", "mysql"]
+  },
+  {
+    "id": 3,
+    "title": "Le buggy",
+    "link": "https://sae402-beta.vercel.app/",
+    "content": "Dans le cadre de la SAE 402, nous avons réalisé un site web interactif présentant un objet typique de la culture amish.",
+    "date": "04/2024",
+    "tools": ["react", "tailwindcss", "three.js"]
   }
 ]
