--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookies": "^0.9.1",
     "embla-carousel-react": "^8.2.0",
     "framer-motion": "^11.3.31",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.428.0",
     "material-react-table": "^2.13.1",
     "next": "14.2.5",
@@ -43,6 +45,8 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookies": "^0.9.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
