gestion dark mode &  autorisation avec cookie

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cookie": "^0.6.0",
     "cookies": "^0.9.1",
     "embla-carousel-react": "^8.2.0",
     "framer-motion": "^11.3.31",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie": "^0.6.0",
     "@types/cookies": "^0.9.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
