--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "clsx": "^2.1.1",
     "cookie": "^0.6.0",
     "cookies": "^0.9.1",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "embla-carousel-react": "^8.2.0",
     "framer-motion": "^11.3.31",
     "js-cookie": "^3.0.5",
