--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
     "react-resizable-panels": "^2.1.0",
+    "react-typed": "^2.0.12",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.5"
